Renamed project to fit URL and added elements required for hosting on maven

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ HELP.md
 
 ### VS Code ###
 .vscode/
+
+
+### Local Settings ###
+settings.xml
+
+### Package reduced POM ###
+dependency-reduced-pom.xml
